--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS -->
     <!-- load Bootstrap and custom style.css -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.0/journal/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- JS -->
     <!-- load Angular, Firebase, Firebase Angular Library, and custom app.js -->
