made active room container

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <a href="#" class="btn btn-primary">start a room</a>
   </p>
 
-  <section id="rooms">
+  <section id="rooms", class="panel panel-default">
+    <div class="panel-heading">Active Rooms</div>
+    <div class="panel-body">
     <div class="container">
         <div class="row">
              <div class="col-sm-6 col-md-3">
@@ -67,6 +69,7 @@
         </div>  
         </div>
       </div>
+    </div>
     </div>
   </section>
 
