--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 
     <!-- CSS -->
     <!-- load Bootstrap and custom style.css -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.0/journal/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- JS -->
     <!-- load Angular, Firebase, Firebase Angular Library, and custom app.js -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://cdn.firebase.com/js/client/1.1.1/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
     <script src="app.js"></script>
 </head>
 <body>
@@ -25,7 +28,7 @@
   </div>
 
   <p class="text-center">    
-    <a href="#" class="btn btn-primary">start a room</a>
+    <a href="#" class="btn btn-primary" data-toggle="modal"  id="makeRoom">start a room</a>
   </p>
 
   <section id="rooms", class="panel panel-default">
@@ -72,7 +75,35 @@
     </div>
     </div>
   </section>
+  <!-- New Room Modal -->
+<div id="newRoom" class="modal fade in" role="dialog" style="display:none;">
+  <div class="modal-dialog">
 
-</div>  
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Create Room</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+</div>
+
+<script>
+$(document).ready(function(){
+    $("#makeRoom").click(function(){
+        $("#newRoom").modal();
+    });
+});
+</script>
+
 </body>
 </html>
