--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <script src="app.js"></script>
 </head>
 <body ng-app="theatreApp">
+    <div class="page-header text-center">       
+    <h1>thea2gether</h1>        
+  </div>
     <div ng-view></div>
 </body>
 </html>
